# ros-indigo-refbox-pkg

./: README.md
refbox/: CMakeLists.txt  package.xml
refbox/include/: EnumConverter.h  NodeController.h
refbox/include/refbox/: RefereeBoxNode.h
refbox/include/refbox/phases/: GamePhase.h  GamePhaseConverter.h
refbox/include/refbox/states/: GameState.h  GameStateConverter.h  PuckState.h  PuckStateConverter.h
refbox/launch/: refbox.launch
refbox/src/: NodeController.cpp  refbox_node.cpp  refbox_talker.cpp
refbox/src/refbox/: RefereeBoxNode.cpp
refbox/src/refbox/phases/: GamePhaseConverter.cpp
refbox/src/refbox/states/: GameStateConverter.cpp  PuckStateConverter.cpp
refbox_msgs/: CMakeLists.txt  package.xml
refbox_msgs/msg/: Exploration.msg  Game.msg  Machines.msg  Order.msg
