<?xml version="1.0"?>
<package>
  <name>refbox_msgs</name>
  <version>1.0.0</version>
  <description>The refbox_msgs package</description>
  <maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
